--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path "src/main/cpp/CMakeLists.txt"
-            version "3.10.2"
+            path "CMakeLists.txt"
         }
     }
 }
